Name:               hsqml
Version:            0.1.1
Cabal-version:      >= 1.10
Build-type:         Custom
License:            BSD3
License-file:       LICENSE
Copyright:          (c) 2010-2012 Robin KAY
Author:             Robin KAY
Maintainer:         komadori@gekkou.co.uk
Stability:          experimental
Homepage:           http://www.gekkou.co.uk/
Category:           Graphics
Synopsis:           Haskell binding for Qt Quick
Extra-source-files: cbits/*.cpp cbits/*.h
Description:
    A Haskell binding for Qt Quick.

    General documentation is present in the 'Graphics.QML' module.

Library
    Default-language: Haskell2010
    Build-depends:
        base         == 4.*,
        containers   == 0.4.*,
        filepath     == 1.3.*,
        network      == 2.3.*,
        text         == 0.11.*,
        tagged       == 0.4.*,
        transformers >= 0.2 && < 0.4
    Exposed-modules:
        Graphics.QML
        Graphics.QML.Debug
        Graphics.QML.Engine
        Graphics.QML.Marshal
        Graphics.QML.Objects
    Other-modules:
        Graphics.QML.Internal.BindPrim
        Graphics.QML.Internal.BindObj
        Graphics.QML.Internal.Marshal
        Graphics.QML.Internal.Objects
        Graphics.QML.Internal.Engine
    Hs-source-dirs: src
    Cc-options: -std=c++0x
    C-sources:
        cbits/HsQMLClass.cpp
        cbits/HsQMLEngine.cpp
        cbits/HsQMLIntrinsics.cpp
        cbits/HsQMLManager.cpp
        cbits/HsQMLObject.cpp
        cbits/HsQMLWindow.cpp
    Include-dirs: cbits
    X-moc-headers:
        cbits/HsQMLEngine.h
        cbits/HsQMLManager.h
        cbits/HsQMLWindow.h
    X-separate-cbits: True
    Build-tools: c2hs
    if os(windows)
        Include-dirs:
            /QT_ROOT/include
            /QT_ROOT/include/QtCore
            /QT_ROOT/include/QtGui
            /QT_ROOT/include/QtDeclarative
        Extra-libraries: QtCore4, QtGui4, QtDeclarative4, stdc++
        Extra-lib-dirs:
            /SYS_ROOT/bin
            /QT_ROOT/bin
    else
        Pkgconfig-depends:
            QtDeclarative >= 4.7

Test-Suite hsqml-test1
    Type: exitcode-stdio-1.0
    Default-language: Haskell2010
    Hs-source-dirs: test
    Main-is: Test1.hs
    Build-depends:
        base      == 4.*,
        directory == 1.1.*,
        network   == 2.3.*,
        hsqml     == 0.1.*

Source-repository head
    type:     darcs
    location: https://patch-tag.com/r/komadori/HsQML
