Name:               hsqml
Version:            0.2.0.2
Cabal-version:      >= 1.14
Build-type:         Custom
License:            BSD3
License-file:       LICENSE
Copyright:          (c) 2010-2014 Robin KAY
Author:             Robin KAY
Maintainer:         komadori@gekkou.co.uk
Stability:          experimental
Homepage:           http://www.gekkou.co.uk/software/hsqml/
Category:           Graphics
Synopsis:           Haskell binding for Qt Quick
Extra-source-files: CHANGELOG cbits/*.cpp cbits/*.h test/Graphics/QML/Test/*.hs
Description:
    A Haskell binding for Qt Quick.

    General documentation is present in the 'Graphics.QML' module.

Flag UsePkgConfig
    Description:
        Use pkg-config for libraries instead of the platform default mechanism.
    Default: False

Flag ThreadedTestSuite
    Description:
        Build test executable with the threaded RTS.
    Default: True

Library
    Default-language: Haskell2010
    Build-depends:
        base         == 4.*,
        containers   >= 0.4 && < 0.6,
        filepath     == 1.3.*,
        network      >= 2.3 && < 2.5,
        text         >= 0.11 && < 1.2,
        tagged       >= 0.4 && < 0.8,
        transformers >= 0.2 && < 0.4
    Exposed-modules:
        Graphics.QML
        Graphics.QML.Debug
        Graphics.QML.Engine
        Graphics.QML.Marshal
        Graphics.QML.Objects
    Other-modules:
        Graphics.QML.Internal.BindPrim
        Graphics.QML.Internal.BindObj
        Graphics.QML.Internal.BindCore
        Graphics.QML.Internal.JobQueue
        Graphics.QML.Internal.Marshal
        Graphics.QML.Internal.MetaObj
        Graphics.QML.Internal.Objects
    Hs-source-dirs: src
    C-sources:
        cbits/HsQMLClass.cpp
        cbits/HsQMLEngine.cpp
        cbits/HsQMLIntrinsics.cpp
        cbits/HsQMLManager.cpp
        cbits/HsQMLObject.cpp
        cbits/HsQMLWindow.cpp
    Include-dirs: cbits
    X-moc-headers:
        cbits/HsQMLEngine.h
        cbits/HsQMLManager.h
        cbits/HsQMLWindow.h
    X-separate-cbits: True
    Build-tools: c2hs
    if os(windows) && !flag(UsePkgConfig)
        Include-dirs: /QT_ROOT/include
        Extra-libraries: QtCore4, QtGui4, QtScript4, QtDeclarative4, stdc++
        Extra-lib-dirs: /SYS_ROOT/bin /QT_ROOT/bin
    else
        if os(darwin) && !flag(UsePkgConfig)
            Frameworks: QtCore QtGui QtScript QtDeclarative
        else
            Pkgconfig-depends:
                QtScript >= 4.7 && < 5.0, QtDeclarative >= 4.7 && < 5.0
        Extra-libraries: stdc++

Test-Suite hsqml-test1
    Type: exitcode-stdio-1.0
    Default-language: Haskell2010
    Hs-source-dirs: test
    Main-is: Test1.hs
    Build-depends:
        base       == 4.*,
        containers >= 0.4 && < 0.6,
        directory  >= 1.1 && < 1.3,
        network    >= 2.3 && < 2.5,
        text       >= 0.11 && < 1.2,
        tagged     >= 0.4 && < 0.8,
        QuickCheck >= 2.4 && < 2.7,
        hsqml      == 0.2.*
    if flag(ThreadedTestSuite)
        GHC-options: -threaded

Source-repository head
    type:     darcs
    location: http://hub.darcs.net/komadori/HsQML/
